# ai-course

./: .gitignore  lintcode.txt
lintcode/13.Implement strStr/: sunday.py
lintcode/5. Kth Largest Element/: fastSort.py
week1/: assignment.txt
week1/Project/: CMakeLists.txt  Project.sln  assignment.ipynb
week1/Project/.ipynb_checkpoints/: assignment-checkpoint.ipynb
week1/Project/Project/: CMakeLists.txt  Project.cpp  Project.h
